--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chalk": "3.0.0",
     "connect-session-sequelize": "7.1.1",
     "cross-env": "7.0.2",
+    "csurf": "1.11.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
